lanabot.yaml
apiVersion: v1
kind: Pod
metadata:
  name: lana-bot-pod
  namespace: lanabot-dev-ns
  labels:
    project: lanabot-project
    env: dev
    release: v1.0
spec:
  containers:
  - name: lana-bot-docker-container
    sed:
    ports:
    - containerPort: 8443
