lanabot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lanabot-service
  labels:
    project: lanabot-project
    env: dev
    release: v1.0
spec:
  selector:
    microservice: lana-bot
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
