lanabot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lanabot
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    project: lanabot-project
    env: dev
    release: v1.0
spec:
  tls:
  - hosts:
    - lanabot.atech-bot.click
    secretName: lanabot-tls-secret
  rules:
  - host: lanabot.atech-bot.click
    http:
      paths:
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: lanabot-service
            port:
              number: 8443
  ingressClassName: nginx
